# unnecessarily-complicated-calculator

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: nothing.yml  unit_test.yaml
Nairobi/: README.md
Nairobi/restapplication/: pom.xml
Nairobi/restapplication/src/main/java/com/example/restapplication/: AddController.java  DivisionController.java  HelloWorldController.java  MultiplicationController.java  ParseAndComputeController.java  RestapplicationApplication.java  SubtractController.java  SubtractNumbers.java
Nairobi/restapplication/src/test/java/com/example/restapplication/: RestapplicationApplicationTests.java
Professor/: main.py
api_server/: .coverage  Dockerfile  dasdas.py  main.py  pyproject.toml  schema.py
api_server/logging/: logger.py
api_server/tests/: test_add.py  test_divide.py  test_multiply.py  test_subtract.py
api_server/tracing/: tracer.py
aws_lambda/: Dockerfile  basic_math_function_lambda.py  main.py  pyproject.toml
nginx/: Dockerfile  nginx.conf
observability/grafana/dashboards/: all-in-one.json  api-server.json  api-tracing.json
observability/grafana/datasource/: datasources.yaml
observability/tempo/: tempo.yaml
webserver/: README.md
